--- a/src/pages/ranking-list/ranking-list.html
+++ b/src/pages/ranking-list/ranking-list.html
@@ -44,7 +44,7 @@
           <img src="assets/imgs/MEAN.jpg">
         </ion-thumbnail>
         <h2>毒液：致命守护者</h2>
-        <p>上映时间：<span>11月30号</span></p>
+        <p>上映日期：<span>11月30号</span></p>
         <p>豆瓣评分<span class="badge-ios-danger">9.0</span></p>
         <p>观影人数<span>2222</span>万</p>
       </ion-item>
