--- a/src/pages/fenlei/fenlei.html
+++ b/src/pages/fenlei/fenlei.html
@@ -4,47 +4,45 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header class="fenlei-header">
+  <ion-title class="fenlei-title" >
+    <ion-icon name="fenleiHeader"></ion-icon>
+    电影分类
+  </ion-title>
 
-  <ion-navbar>
-    <ion-title>fenlei</ion-title>
-  </ion-navbar>
-
-  <ion-toolbar>
-    <ion-segment [(ngModel)]="testSegment" color="secondary">
-      <ion-segment-button value="text1">
-        text1
-      </ion-segment-button>
-      <ion-segment-button value="text2">
-        text2
-      </ion-segment-button>
-      <ion-segment-button value="text3">
-        text3
-      </ion-segment-button>
-      <ion-segment-button value="text4">
-        text4
-      </ion-segment-button>
-      <ion-segment-button value="text5">
-        text5
-      </ion-segment-button>
+  <ion-toolbar class="fenlei-tabs">
+    <ion-segment [(ngModel)]="fenleiNav" class="fenlei-tabs-box">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" *ngFor="let item of arr" (click)="selectNavItem(item.index,$event)">
+            <ion-segment-button value="" [ngClass]="{'fenleiNav-active': navActiveCss == item.index}" class="fenlei-tab">
+              {{item.navName}}
+            </ion-segment-button>
+          </div>
+        </div>
+      </div>
     </ion-segment>
   </ion-toolbar>
 </ion-header>
 
-
-<ion-content (swipe)="swipeEvent($event)">
-  <div [ngSwitch]="testSegment">
-    <div *ngSwitchCase="'1'">
-      111
-    </div>
-    <div *ngSwitchCase="'2'">
-      菜单二
-    </div>
-    <div *ngSwitchCase="'3'">
-      菜单三
-    </div>
-    <div *ngSwitchCase="4">
-      菜单四
-    </div>
+<ion-content class="fenlei-content">
+  <div [ngSwitch]="fenleiNav">
+    <ion-slides (ionSlideDidChange)="slideChanged()">
+      <ion-slide *ngFor="let item of arr">
+        <ion-list *ngSwitchCase="item.navName" class="fenlei-movieList">
+          <ion-item>
+            <ion-thumbnail item-start>
+              <img src="assets/imgs/MEAN.jpg">
+            </ion-thumbnail>
+            <h2>毒液：致命守护者</h2>
+            <p>豆瓣评分<span class="badge-ios-danger">9.0</span></p>
+            <p>产地：<span>香港、中国大陆</span></p>
+            <p>导演：<span>李安</span></p>
+          </ion-item>
+        </ion-list>
+      </ion-slide>
+    </ion-slides>
   </div>
 </ion-content>
+
+
