--- a/src/pages/personal-center/personal-center.html
+++ b/src/pages/personal-center/personal-center.html
@@ -7,10 +7,10 @@
 <ion-header class="personal-center-header">
   <ion-list>
     <ion-item>
-      <ion-icon item-left name="setting"></ion-icon>
+      <ion-icon item-left name="setting" (click)="goSetting()"></ion-icon>
       <ion-icon item-right name="message"></ion-icon>
     </ion-item>
-    <ion-item>
+    <ion-item (click)="goInfoSetting()">
       <ion-thumbnail item-start>
         <img src="assets/imgs/MEAN.jpg">
       </ion-thumbnail>
@@ -23,7 +23,27 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="personal-center-content">
+  <ion-grid>
+    <ion-row>
+      <ion-col col-3>
+        <ion-icon name="movieTicket"></ion-icon>
+        <p>电影票</p>
+      </ion-col>
+      <ion-col col-3>
+        <ion-icon name="youhuiquan"></ion-icon>
+        <p>优惠券</p>
+      </ion-col>
+      <ion-col col-3>
+        <ion-icon name="followIcon"></ion-icon>
+        <p>关注<p>
+      </ion-col>
+      <ion-col col-3>
+        <ion-icon name="fansIcon"></ion-icon>
+        <p>粉丝</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-list>
     <ion-item>
       <h2 item-left>
@@ -33,19 +53,19 @@
     </ion-item>
     <ion-item>
       <h2 item-left>
-        我的收藏
+        我的影评
+      </h2>
+      <ion-icon item-right name="youjiantou"></ion-icon>
+    </ion-item>
+    <ion-item>
+      <h2 item-left>
+        想看的电影
       </h2>
       <ion-icon item-right name="youjiantou"></ion-icon>
     </ion-item>
     <ion-item>
       <h2 item-left>
         看过的电影
-      </h2>
-      <ion-icon item-right name="youjiantou"></ion-icon>
-    </ion-item>
-    <ion-item>
-      <h2 item-left>
-        银行卡特惠
       </h2>
       <ion-icon item-right name="youjiantou"></ion-icon>
     </ion-item>
