--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
   </div>
 </ion-header>
 
-<ion-content class="clearFix">
+<ion-content class="home-content clearFix">
   <!-- 轮播图 -->
   <div class="banner">
     <ion-slides pager loop="true" autoplay="2000">
