--- a/src/pages/home/comesoon/comesoon.html
+++ b/src/pages/home/comesoon/comesoon.html
@@ -15,17 +15,15 @@
 
 <ion-content>
   <ion-list class="comesoon-movieList">
-    <ion-item class="movieList-item">
+    <ion-item class="movieList-item" *ngFor="let item of comesoon_movie_data">
       <ion-thumbnail item-start>
-        <img src="assets/imgs/MEAN.jpg">
+        <img src="{{item.images.small}}">
       </ion-thumbnail>
-      <h2>毒液：致命守护者</h2>
+      <h2>{{item.title}}</h2>
       <p>上映日期：<span>11月30号 周五</span></p>
-      <p>有<span>12345345</span>人想看</p>
-      <!--<span ng-repeat="director in item.directors">{{director.name}}{{$last?'':'、'}}</span>-->
-      <p>导演：<span>李安</span></p>
-      <!--{{item.genres.join('、')}}-->
-      <p>主演：<span>邓超</span></p>
+      <p>有<span>{{item.collect_count}}</span>人想看</p>
+      <p>导演：<span *ngFor="let director of item.directors; index as i">{{director.name}}{{(i === item.directors.length-1)?'':'、'}}</span></p>
+      <p>主演：<span *ngFor="let cast of item.casts; index as i">{{cast.name}}{{(i === item.casts.length-1)?'':'、'}}</span></p>
       <button ion-button clear item-end>预售</button>
     </ion-item>
   </ion-list>
