--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,19 +7,32 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>账号登录</ion-title>
   </ion-navbar>
 
 </ion-header>
 
-
-<ion-content padding>
+<ion-content class="login-content">
   <ion-list>
     <ion-item>
-      <ion-input type="text" placeholder="请输入账号"></ion-input>
+      <ion-label>
+        <ion-icon name="accoundIcon"></ion-icon>
+      </ion-label>
+      <ion-input type="text" placeholder="账号/手机号码/邮箱"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="password" placeholder="请输入密码"></ion-input>
+      <ion-label>
+        <ion-icon name="passwordIcon"></ion-icon>
+      </ion-label>
+      <ion-input type="password" max="16" placeholder="请输入密码"></ion-input>
+      <ion-icon item-right name="pwSeeIcon"></ion-icon>
     </ion-item>
   </ion-list>
+  <div class="login-box">
+    <button class="loginBtn" ion-button [block]="true">登录</button>
+    <button class="forgot-password floatRight">忘记密码</button>
+  </div>
+  <div class="register-box">
+    <button class="registerBtn" ion-button>立即注册</button>
+  </div>
 </ion-content>
