--- a/src/pages/personal-center/setting/setting.html
+++ b/src/pages/personal-center/setting/setting.html
@@ -1,3 +1,9 @@
+<!--
+  Generated template for the SettingPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header class="setting-header">
   <ion-navbar>
     <ion-title text-center>设置</ion-title>
@@ -37,7 +43,7 @@
       <ion-icon item-right name="youjiantou"></ion-icon>
     </ion-item>
     <div class="login-out">
-      <button ion-button color="danger">退出登录</button>
+      <button ion-button color="danger" (click)="login()">退出登录</button>
     </div>
   </ion-list>
 </ion-content>
